tests/core/positive/functions/call_and_block.vais
F add(a: i64, b: i64) -> i64 {
    a + b
}

F main() -> i64 {
    x: i64 := add(20, 22)
    I x != 42 { R 1 }
    R 0
}
