tests/core/negative/types/undefined_var.vais
F main() -> i64 {
    R missing_value
}
